--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "echo \"Test passed\""
   },
   "keywords": [
     "adonisjs",
@@ -24,8 +24,7 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3",
-    "@fullstack/frontend": "0.1.0"
+    "@adonisjs/lucid": "^6.1.3"
   },
   "devDependencies": {},
   "autoload": {
